# MHWildsHighQualityPhoto

assets/QuestResult/: modinfo.ini
source/reframework/: CMakeLists.txt  GameUIController.cpp  GameUIController.hpp  MHWildsTypes.h  ModSettings.hpp  PluginBase.cpp  PluginBase.hpp  Plugin_AlbumPhoto.cpp  Plugin_AlbumPhoto.hpp  Plugin_QuestResult.cpp  Plugin_QuestResult.hpp  QuestResultHQBackgroundMode.hpp  WebPCaptureInjector.cpp  WebPCaptureInjector.hpp
source/reframework/InjectClient/: GameProducedMaxQualityInjectClient.cpp  GameProducedMaxQualityInjectClient.hpp  ReShadeAddOnInjectClient.cpp  ReShadeAddOnInjectClient.hpp
source/reshade/: HDRProcessing.hpp  JXLDef.hpp  Plugin.cpp  Plugin.h
